backing properties and packaging apply

--- a/app/src/main/res/layout/movie_recycler_view_item.xml
+++ b/app/src/main/res/layout/movie_recycler_view_item.xml
@@ -9,7 +9,7 @@
             type="com.mylab.moviesearchdata.model.Search" />
         <variable
             name="itemClick"
-            type="com.mylab.moviesearchdata.MovieItemClick" />
+            type="com.mylab.moviesearchdata.interfaces.MovieItemClick" />
     </data>
 
 <androidx.constraintlayout.widget.ConstraintLayout
