--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="adapter"
-            type="com.mylab.moviesearchdata.MovieRecyclerListAdapter" />
+            type="com.mylab.moviesearchdata.adapters.MovieRecyclerListAdapter" />
 
     </data>
 
@@ -16,7 +16,7 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListFragment"
+    tools:context=".fragments.ListFragment"
 
     >
 
