--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/listFragment">
     <fragment
         android:id="@+id/listFragment"
-        android:name="com.mylab.moviesearchdata.ListFragment"
+        android:name="com.mylab.moviesearchdata.fragments.ListFragment"
         android:label="Movies List"
         tools:layout="@layout/fragment_list">
         <action
@@ -15,7 +15,7 @@
     </fragment>
     <fragment
         android:id="@+id/detailFragment"
-        android:name="com.mylab.moviesearchdata.DetailFragment"
+        android:name="com.mylab.moviesearchdata.fragments.DetailFragment"
         android:label="Movie Details"
         tools:layout="@layout/fragment_detail">
         <argument
